# FinSL-signbank

./: .gitignore  .osv-detector.yml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: README.s3commands.md  README.s3scripts.md  nzsl-share-import.md  qualtrics_signbank_interaction.md  validation_result_model.md
locale/fi/LC_MESSAGES/: django.po
signbank/: editorial_queue.py  tools.py
signbank/dictionary/: admin.py  adminviews.py  csv_import.py  forms.py  models.py  publicviews.py  tasks.py  tools.py  update.py  urls.py  views.py
signbank/dictionary/management/commands/: find_fixable_s3_orphans.py  get_video_s3_acls.py  repair_fixable_s3_orphans.py
signbank/dictionary/migrations/: 0010_auto_20220215_1359.py  0012_gloss_sn.py  0013_auto_20220512_1334.py  0014_auto_20220524_1006.py  0014_auto_20220525_1420.py  0015_merge_20220525_1445.py  0016_auto_20220525_1750.py  0025_auto_20220607_1510.py  0026_auto_20220608_0859.py  0031_gloss_assigned_user.py  0035_gloss_lemma.py  0043_new_tag_and_share_import_user.py  0044_share_validation_aggregtion_model.py  0045_validation_record_model.py  0046_remove_unneeded_validation_record_fields.py  0047_unique_together_for_validation_record.py  0048_manual_validation_aggregation.py  0049_alter_gloss.py  0050_alter_fieldchoice_options.py
signbank/dictionary/templates/dictionary/: admin_gloss_list.html  gloss_detail.html  gloss_detail_advanced.html  gloss_revision_history_tab.html  gloss_validation_results_tab.html  import_manual_validation_csv.html  import_manual_validation_csv_confirmation.html  import_nzsl_share_gloss_csv.html  import_nzsl_share_gloss_csv_confirmation.html  import_qualitrics_csv.html  import_qualitrics_csv_confirmation.html  import_qualtrics_csv.html  import_qualtrics_csv_confirmation.html  manage_lexicons.html  paginate.html  public_gloss_detail.html  public_gloss_list.html
signbank/dictionary/tests/: test_adminviews.py  test_csv_import.py  test_models.py  test_update.py  tests_tasks.py
signbank/settings/: base.py  development.py  production.py
signbank/static/css/: signbank.css
signbank/static/js/: gloss_edit.js
signbank/video/: admin.py  forms.py  models.py  urls.py  views.py
signbank/video/migrations/: 0005_glossvideotoken.py
signbank/video/tests/: test_views.py
templates/: menu.html
templates/admin/: input_filter.html
templates/editorial_queue/: queue.html  queue_gloss_details.html
