[tool.poetry]
name = "nzsl-signbank"
version = "0.1.0"
description = "Web based database for sign language lexicons and corpuses. Fork of NGT-signbank."
authors = ["Ackama <info@ackama.com>"]
license = "BSD-3-Clause license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.25"
django-bootstrap3 = "21.2"
django-contrib-comments = "1.9.2"
django-debug-toolbar = "3.2.2"
django-guardian = "2.2.0"
django-modeltranslation = "0.18.2"
django-notifications-hq = "1.6.0"
django-queryset-csv = "1.1.0"
django-registration = "3.1.2"
django-reversion = "4.0.0"
django-storages = "1.12.1"
django-summernote = "0.8.11.6"
django-tagging = "0.5.0"
boto3 = "1.22.8"
certifi = "2023.7.22"
dj-database-url = "0.5.0"
gunicorn = "22.0.0"
psycopg2 = "2.8.6"
sentry-sdk = "1.14.0"
urllib3 = "1.26.18"
whitenoise = "6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
